# parallel-motion-detection

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Implementation.md  Makefile  Plot.ipynb  README.md  TODO.md  benchmark.sh  cmake_install.cmake
experiments/: BlackWhite.cpp  Blur.cpp  Check.cpp  Conv.cpp  FrameTa.cpp  Grayscale.cpp  MultipleCap.cpp  OptBlur.cpp  Read.cpp  TSetup.cpp  VecBlackWhite.cpp  malloc2D.cpp  test.py
kernel_3x3_00/: fastflow.csv  sequential.csv  thread.csv
kernel_3x3_01/: fastflow.csv  sequential.csv  thread.csv
kernel_3x3_10/: fastflow.csv  sequential.csv  thread.csv
kernel_3x3_11/: fastflow.csv  sequential.csv  thread.csv
kernel_9x9_00/: fastflow.csv  sequential.csv  thread.csv
kernel_9x9_01/: fastflow.csv  sequential.csv  thread.csv
kernel_9x9_10/: fastflow.csv  sequential.csv  thread.csv
kernel_9x9_11/: fastflow.csv  sequential.csv  thread.csv
output/: sequential.csv  thread.csv
src/: Benchmark.cpp  FastFlow.cpp  Main.cpp  OptimizedUtils.cpp  Sequential.cpp  SharedQueue.cpp  Thread.cpp  Utils.cpp  UtilsMat.cpp  Utimer.cpp
