cmake_minimum_required(VERSION 2.8.12)
project( ParallelMotionDetection )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable( FrameTa experiments/FrameTa.cpp )
set_property(TARGET FrameTa PROPERTY CXX_STANDARD 20)
target_compile_options( FrameTa PRIVATE -O3 -Wall )
target_link_libraries( FrameTa ${OpenCV_LIBS} )

add_executable( BlackWhite experiments/BlackWhite.cpp )
set_property(TARGET BlackWhite PROPERTY CXX_STANDARD 20)
target_compile_options( BlackWhite PRIVATE -O3 -Wall )
target_link_libraries( BlackWhite ${OpenCV_LIBS} )

add_executable( Conv experiments/Conv.cpp )
set_property(TARGET Conv PROPERTY CXX_STANDARD 20)
target_compile_options( Conv PRIVATE -O3 -Wall )
target_link_libraries( Conv ${OpenCV_LIBS} )

add_executable( Benchmark src/Benchmark.cpp )
set_property(TARGET Benchmark PROPERTY CXX_STANDARD 20)
target_compile_options( Benchmark PRIVATE -O3 -Wall )
target_link_libraries( Benchmark ${OpenCV_LIBS} pthread )

add_executable( Main src/Main.cpp )
set_property(TARGET Main PROPERTY CXX_STANDARD 20)
target_compile_options( Main PRIVATE -O3 -Wall )
target_link_libraries( Main ${OpenCV_LIBS} pthread )