cmake_minimum_required(VERSION 2.8.12)
project( ParallelMotionDetection )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable( Read experiments/Read.cpp )
set_property(TARGET Read PROPERTY CXX_STANDARD 20)
target_compile_options( Read PRIVATE -O3 -Wall )
target_link_libraries( Read ${OpenCV_LIBS} )

add_executable( Grayscale experiments/Grayscale.cpp )
set_property(TARGET Grayscale PROPERTY CXX_STANDARD 20)
target_compile_options( Grayscale PRIVATE -O3 -Wall )
target_link_libraries( Grayscale ${OpenCV_LIBS} )

add_executable( Blur experiments/Blur.cpp )
set_property(TARGET Blur PROPERTY CXX_STANDARD 20)
target_compile_options( Blur PRIVATE -O3 -Wall )
target_link_libraries( Blur ${OpenCV_LIBS} )

add_executable( OptBlur experiments/OptBlur.cpp )
set_property(TARGET OptBlur PROPERTY CXX_STANDARD 20)
target_compile_options( OptBlur PRIVATE -O3 -Wall )
target_link_libraries( OptBlur ${OpenCV_LIBS} )

add_executable( Check experiments/Check.cpp )
set_property(TARGET Check PROPERTY CXX_STANDARD 20)
target_compile_options( Check PRIVATE -O3 -Wall )
target_link_libraries( Check ${OpenCV_LIBS} )

add_executable( Benchmark src/Benchmark.cpp )
set_property(TARGET Benchmark PROPERTY CXX_STANDARD 20)
target_compile_options( Benchmark PRIVATE -O3 -Wall )
target_link_libraries( Benchmark ${OpenCV_LIBS} pthread )

add_executable( Main src/Main.cpp )
set_property(TARGET Main PROPERTY CXX_STANDARD 20)
target_compile_options( Main PRIVATE -O3 -Wall )
target_link_libraries( Main ${OpenCV_LIBS} pthread )